@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160510] [svn: r702]
+Changelog for sg3_utils-1.43 [20160511] [svn: r703]
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
   - sg_format: add --timeout=SEC option
@@ -38,6 +38,8 @@ Changelog for sg3_utils-1.43 [20160510] [svn: r702]
     - implement 'format' argument in dStrHexStr()
   - sg_lib_data: sync asc/ascq codes with T10 20160425
   - rescan-scsi-bus.sh: harden code
+    - fixes from Suse; bump version to: 20160511
+  - 55-scsi-sg3_id.rules: fixes from Suse
   - clang --analyze static checker clean ups
   - shellcheck cleanup on scripts
   - automake: add AM_PROG_AR to configure.ac
